mejorando el cv del murcielago

--- a/clase_7/index.html
+++ b/clase_7/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="Es">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href=css/style.css>
@@ -7,13 +7,13 @@
 </head>
 <body>
     <header>
-        <div class="header-img-container">
+        <div>
             <img src="img/logo batman.png" alt="Batman">
         </div>
         <h1>Curriculum Vitae de Bruce Wayne</h1>
     </header>
     <main>
-        <section class="info-personal">
+        <section>
             <h3>Datos Personales</h3>
             <ul>
                 <li><span>Nombre completo:</span> Bruce Wayne</li>
@@ -21,26 +21,47 @@
                 <li><span>Lugar de nacimiento:</span> Gotham City</li>
             </ul>
         </section>
-        <section class="educacion">
+        <section>
             <h3>Formación Académica</h3>
             <ul>
-                <li><strong>1956-1961:</strong> Universidad del espantapájaros<br>Licenciatura en aeronaútica</li>
-                <li><strong>1952-1956:</strong> Secundario Gotham<br>Bachiller con especialización en trucos</li>
+                <li><span>1956-1961:</span>universidad del espantapajaros</li>
+                <ul>
+                    <li>licenciatura en aeronautica</li>
+                </ul>
+                <li><span>1952-1956:</span>Secundario Gotham</li>
+                <ul>
+                    <li>Bachiller con especialidad en trucos</li>
+                </ul>
             </ul>
+        
         </section>
-        <section class="experiencia-laboral">
+        <section>
             <h3>Experiencia Laboral</h3>
             <ul>
-                <li><strong>1975-1985:</strong> Desocupado<br>Sin trabajo porquer se me rompió el batimovil</li>
-                <li><strong>1965-1975:</strong> Cazavillanos y demás chusma<br>Atrapé a Gatubela a joker a Victor Fries lo dejé porque se me congeló la capa</li>
-                <li><strong>1962-1965:</strong> Aprendiz de superhéroes<br>Hice pasantía con Superman. Opté por usar mascara porque no pude aprender a peinarme el rulo</li>
+                <li><span>1975-1985:</span>Desocupado</li>
+                 <ul type:"none">
+                     <li>sin trabajo porque se me rompio el batimovil</li>
+                 </ul>
             </ul>
+            <ul>
+                <li><span>1965-1975:</span>Cazavillanos y desmas chusma.</li>
+                <ul type:"none">
+                    <li>Atrapé a Gatubela y al joker; a Victor Fries lo deje porque se me congelo la capa</li>
+                </ul>
+            </ul>           
+            <ul>
+                <li><span>1962-1965:</span>Aprendiz de Superheroe</li>
+                <ul type:"none">
+                    <li>Hice pasantias con Superman.Opte por la mascara porque no pude aprender a peinarme el rulo</li>
+                </ul>
+            </ul>
+                 
         </section>
     </main>
     <footer>
-        <p>0810 - BATMAN</p>
-        <a href="#"><img src="img/ico_instagram.png" alt="Instagram Logo"></a>
-        <a href="#"><img src="img/ico_linkedin.png" alt="Linkedin Logo"></a>
+        <span>0810 - BATMAN</span>
+        <span><a href="#"><img src="img/ico_instagram.png" alt="Instagram Logo"></a></span>
+        <span><a href="#"><img src="img/ico_linkedin.png" alt="Linkedin Logo"></a></span>
     </footer>
 </body>
 </html>
