cargando todo lo que me falta

--- a/clase_12/index.html
+++ b/clase_12/index.html
@@ -2,21 +2,30 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/style.css">
      <title>Proyecto PETSHOP</title>
-     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
    <header>
-     <nav class="ofertas">
-         <span>Grandes ofertas en comederos</span><span>Español</span><span>$arg</span>
-     </nav>
-     <section class="logonaranja">
-       <img src="img/logo.png" alt="Front cat&dog">
-       <span><img src="img/pawprint 1.png" alt="patita"><a href="">Categorias</a></span>
-       <span><img src="img/pawprint 1.png" alt="patita"><a href="">Pets</a></span>
-       <span><img src="img/pawprint 1.png" alt="patita"><a href="">Nosotros</a></span>
-       <span><img src="img/pawprint 1.png" alt="patita"><a href="">Contactanos</a></span>
-     </section>
+        <div class="enGrone">
+                <nav>
+                 <span>Grandes ofertas en comederos</span>
+                 <span>Español</span>
+                 <span>Ars $</span>
+                </nav>
+                    </div>
+<div>
+               <img src="img/logo.png" alt="logo front CAT & DOG">
+                <nav>
+                 <ul>
+                        <li><a href="">Categorias</a></li>
+                         <li><a href="">Pets</a></li>
+                         <li><a href="">Nosotros</a></li>
+                         <li><a href="">Contacto</a></li>
+                     </ul>
+                </nav>
+    </div>
+
    </header>
    <main>
        <section>
@@ -26,9 +35,9 @@
            <h2>COMEDEROS</h2>
        </section>
        <section>
-           <img src="img/patita.png" alt="patita" class="patita">
+           <img src="img/patita.png" alt="patita">
            <h2>PRODUCTOS DESTACADOS</h2>
-           <nav><a href="">comederos</a><a href="">accesorios</a><a href="">comida</a></nav>
+           <nav><a href="">comederos</a><a href="">accespios</a><a href="">comida</a></nav>
            <article>
                <img src="img/churrasquito.png" alt="jugete churrasquito">
                <ul type:"none">
